<resources>
    <string name="app_name">sound classification</string>
    <string name="signin_msg">Have an account already? Click here to sign in</string>
    <string name="btn_signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_msg">Don\'t have an account? Click here to Sign up</string>
    <string name="user_name">user_name</string>
    <string name="welcome">Welcome</string>
    <string name="sound">SOUND:</string>
    <string name="sign_out">Sign out</string>
</resources>
